add footer style

--- a/excercises/aboutme/css/style.scss
+++ b/excercises/aboutme/css/style.scss
@@ -1,6 +1,8 @@
 @import "reset";
 @import "variable";
+@import "font-awesome/_font-awesome";
 
 @import "default";
 
 @import "site-header";
+@import "site-footer";
