--- a/excercises/aboutme/css/_default.scss
+++ b/excercises/aboutme/css/_default.scss
@@ -1,7 +1,9 @@
 html {
   font-size: 10px;
 }
-
+html, body {
+  height: 100%;
+}
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
