add files color and typography for scss

--- a/excercises/aboutme/css/style.scss
+++ b/excercises/aboutme/css/style.scss
@@ -1,5 +1,7 @@
 @import "reset";
-@import "variable";
+@import "colors";
+@import "typography";
+
 @import "font-awesome/_font-awesome";
 
 @import "default";
