add social icons

--- a/excercises/aboutme/css/_site-footer.scss
+++ b/excercises/aboutme/css/_site-footer.scss
@@ -1,19 +1,39 @@
 /* == SITE FOOTER == */
 .site-footer {
-  position: absolute;
-  bottom: 0;
+  @extend %clearfix;
   width: 100%;
   background-color: $color-black;
   padding: 10px 0 0;
   p {
+    float: left;
     padding-left: 10px;
     text-align: left;
     color: $color-white;
     font-size: 1.1rem;
+    margin-bottom: 0;
+    margin-top: 4px;
   }
-  .social-icon {
+}
+
+.social-icon {
+  float: right;
+  padding-right: 10px;
+  li {
+    display: inline-block;
+    margin-right: 10px;
     a {
+      display: block;
       color: $color-white;
+      border: 1px solid $color-white;
+      width: 28px;
+      height: 25px;
+      text-align: center;
+      line-height: 25px;
+      @include transition(.3s);
+      &:hover {
+        color: $color-black;
+        background-color: $color-white;
+      }
     }
   }
 }
