--- a/excercises/aboutme/css/style.css
+++ b/excercises/aboutme/css/style.css
@@ -36,6 +36,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+html {
+  font-size: 10px; }
+
+body {
+  font-size: 1.4rem;
+  font-family: "Arial", sans-serif; }
+
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
@@ -2222,9 +2229,6 @@ table {
   overflow: visible;
   clip: auto; }
 
-html {
-  font-size: 10px; }
-
 html, body {
   height: 100%; }
 
@@ -2233,9 +2237,12 @@ html, body {
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
-body {
-  font-size: 1.4rem;
-  font-family: Arial, sans-serif; }
+.site-footer::after {
+  content: "";
+  display: block;
+  height: 0;
+  visibility: visible;
+  clear: both; }
 
 ul, ol {
   margin-left: 15px;
@@ -2280,17 +2287,39 @@ h6 {
 
 /* == SITE FOOTER == */
 .site-footer {
-  position: absolute;
-  bottom: 0;
   width: 100%;
   background-color: #000000;
   padding: 10px 0 0; }
   .site-footer p {
+    float: left;
     padding-left: 10px;
     text-align: left;
     color: #FFFFFF;
-    font-size: 1.1rem; }
-  .site-footer .social-icon a {
-    color: #FFFFFF; }
+    font-size: 1.1rem;
+    margin-bottom: 0;
+    margin-top: 4px; }
+
+.social-icon {
+  float: right;
+  padding-right: 10px; }
+  .social-icon li {
+    display: inline-block;
+    margin-right: 10px; }
+    .social-icon li a {
+      display: block;
+      color: #FFFFFF;
+      border: 1px solid #FFFFFF;
+      width: 28px;
+      height: 25px;
+      text-align: center;
+      line-height: 25px;
+      -webkit-transition: all 0.3s ease-out;
+      -moz-transition: all 0.3s ease-out;
+      -ms-transition: all 0.3s ease-out;
+      -o-transition: all 0.3s ease-out;
+      transition: all 0.3s ease-out; }
+      .social-icon li a:hover {
+        color: #000000;
+        background-color: #FFFFFF; }
 
 /*# sourceMappingURL=style.css.map */
