--- a/excercises/aboutme/css/_default.scss
+++ b/excercises/aboutme/css/_default.scss
@@ -6,6 +6,16 @@ html, body {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
+%clearfix {
+  &::after {
+    content: "";
+    display: block;
+    height: 0;
+    visibility: visible;
+    clear: both;
+  }
+}
+
 ul, ol {
   margin-left: 15px;
   list-style-position: inside;
