--- a/excercises/aboutme/css/style.scss
+++ b/excercises/aboutme/css/style.scss
@@ -1,5 +1,5 @@
 @import "normalize/_normalize";
-
+@import "reset";
 @import "colors";
 @import "typography";
 
@@ -10,3 +10,4 @@
 
 @import "site-header";
 @import "site-footer";
+@import "site-banner";
