--- a/excercises/aboutme/css/_default.scss
+++ b/excercises/aboutme/css/_default.scss
@@ -15,36 +15,12 @@ html, body {
     clear: both;
   }
 }
-
-ul, ol {
-  margin-left: 15px;
-  list-style-position: inside;
-}
-ul {
-  list-style-type: disc;
-}
-ol {
-  list-style-type: decimal;
+%list-reset {
+  margin: 0;
+  paddin: 0;
+  list-style-type: none;
 }
 ul, ol, p {
   margin-bottom: 10px;
   line-height: 1.5;
-}
-h1 {
-  font-size: 3.3rem;
-}
-h2 {
-  font-size: 2.8rem;
-}
-h3 {
-  font-size: 2.3rem;
-}
-h4 {
-  font-size: 1.8rem;
-}
-h5 {
-  font-size: 1.3rem;
-}
-h6 {
-  font-size: .8rem;
 }
