--- a/excercises/aboutme/css/_site-footer.scss
+++ b/excercises/aboutme/css/_site-footer.scss
@@ -3,7 +3,7 @@
   @extend %clearfix;
   width: 100%;
   background-color: $color-black;
-  padding: 10px 0 0;
+  padding: 10px 0;
   p {
     float: left;
     padding-left: 10px;
@@ -18,6 +18,7 @@
 .social-icon {
   float: right;
   padding-right: 10px;
+  @extend %list-reset;
   li {
     display: inline-block;
     margin-right: 10px;
