--- a/excercises/aboutme/css/_site-footer.scss
+++ b/excercises/aboutme/css/_site-footer.scss
@@ -2,22 +2,21 @@
 .site-footer {
   @extend %clearfix;
   width: 100%;
-  background-color: $color-black;
+  background-color: $color-grey;
   padding: 10px 0;
+  position: absolute;
+  bottom: 0;
   p {
-    float: left;
-    padding-left: 10px;
-    text-align: left;
+    text-align: center;
     color: $color-white;
     font-size: 1.1rem;
     margin-bottom: 0;
     margin-top: 4px;
   }
 }
-
 .social-icon {
-  float: right;
-  padding-right: 10px;
+  text-align: center;
+  margin-top: 10px;
   @extend %list-reset;
   li {
     display: inline-block;
@@ -32,9 +31,25 @@
       line-height: 25px;
       @include transition(.3s);
       &:hover {
-        color: $color-black;
+        color: $color-grey;
         background-color: $color-white;
       }
+    }
+  }
+}
+
+
+@media screen and (min-width: 480px) {
+  .site-footer {
+    p {
+      float: left;
+      text-align: left;
+      padding-left: 10px;
+    }
+    ul {
+      float: right;
+      padding-right: 10px;
+      margin-top: 0;
     }
   }
 }
