--- a/excercises/aboutme/css/_site-footer.scss
+++ b/excercises/aboutme/css/_site-footer.scss
@@ -1,12 +1,9 @@
 /* == SITE FOOTER == */
 .site-footer {
   @extend %clearfix;
-  width: 100%;
   background-color: $color-grey;
-  padding: 10px 0;
-  position: absolute;
-  bottom: 0;
   p {
+    padding-top: 15px;
     text-align: center;
     color: $color-white;
     font-size: 1.1rem;
@@ -18,6 +15,7 @@
   text-align: center;
   margin-top: 10px;
   @extend %list-reset;
+  padding-bottom: 15px;
   li {
     display: inline-block;
     margin-right: 10px;
@@ -45,10 +43,13 @@
       float: left;
       text-align: left;
       padding-left: 10px;
+      padding-bottom: 15px;
     }
     ul {
       float: right;
       padding-right: 10px;
+      padding-top: 15px;
+
       margin-top: 0;
     }
   }
