--- a/excercises/aboutme/css/_typography.scss
+++ b/excercises/aboutme/css/_typography.scss
@@ -1,9 +1,11 @@
+$Galada: 'Galada';
+$Slabo: 'Slabo 27px';
 $Arial: 'Arial';
 
 html {
   font-size: 10px;
 }
 body {
-  font-size: 1.4rem;
-  font-family: $Arial, sans-serif;
+  font-size: 1.7rem;
+  font-family: $Slabo, sans-serif;
 }
