--- a/excercises/aboutme/css/_site-header.scss
+++ b/excercises/aboutme/css/_site-header.scss
@@ -6,10 +6,12 @@
   position: fixed;
   width: 100%;
   h1 {
+    font-family: $Galada, cursive;
+    font-weight: normal;
     color: $color-white;
-    padding: 10px 0;
+    padding: 5px 0;
     text-align: center;
-    font-size: 2.4rem;
+    font-size: 3rem;
     margin: 0;
   }
 }
