--- a/excercises/first-website/css/_grid.scss
+++ b/excercises/first-website/css/_grid.scss
@@ -1,40 +1,60 @@
 /* == grid system == */
-$grid-pad: 20px;
 
+$container-inside: 1200px;
+
+$device-smallest: "(min-width: 240px)";
+$device-smaller: "(min-width: 320px)";
+$device-small: "(min-width: 480px)";
+$device-medium: "(min-width: 640px)";
+$device-more-medium: "(min-width: 768px)";
+$device-big: "(min-width: 1024px)";
+$device-large: "(min-width: 1200px)";
+$device-larger: "(min-width: "$container-inside")";
+
+$pad: 20px;
 
 .grid {
-  &::before,
-  &::after {
+  background: white;
+  margin: 0 auto $pad auto;
+  &:after {
     content: "";
     display: table;
     clear: both;
   }
-  [class*='col-'] {
-    padding: $grid-pad;
-  }
 }
 
-
-
-@media screen and (min-width: $device-small) {
-  .grid {
-    [class*='col-'] {
-      float:left;
-      padding: $grid-pad;
-      &:last-child {
-        padding-right: 0;
-      }
-    }
-    .col-1-2 {
-      width: 50%;
+[class*='col-'] {
+  padding-left: $pad;
+  padding-right: $pad;
+  @media #{$device-small} {
+    float: left;
+    padding-right: $pad;
+  }
+  @media #{$device-larger} {
+    padding-left: 0;
+    padding-riight: 0;
+    .grid &:last-of-type {
+      padding-right: 0;
     }
   }
 }
 
-@media screen and (min-width: $device-medium) {
-  .grid {
-    .col-1-4 {
-      width: 25%;
-    }
+@media #{$device-small} {
+  .col-1-3 {
+    width: 100%;
+  }
+  .col-1-2,
+  .col-1-4,
+  .col-1-8 {
+    width: 50%;
+  }
+}
+
+@media #{$device-medium} {
+  .col-1-3 {
+    width: 33.333%;
+  }
+  .col-1-4 {
+    width: 25%;
   }
 }
