--- a/excercises/first-website/css/style.scss
+++ b/excercises/first-website/css/style.scss
@@ -3,9 +3,10 @@
 @import "colors";
 @import "typography";
 @import "grid";
+@import "mixins";
 
 @import "default";
 
-
 @import "site-links";
 @import "site-footer";
+@import "photos-article";
