--- a/excercises/aboutme/css/_site-footer.scss
+++ b/excercises/aboutme/css/_site-footer.scss
@@ -2,24 +2,35 @@
 .site-footer {
   @extend %clearfix;
   background-color: $color-grey;
-  p {
+
+  .copyright {
+    margin-top: 4px;
+    margin-bottom: 0;
     padding-top: 15px;
     text-align: center;
     color: $color-white;
     font-size: 1.5rem;
-    margin-bottom: 0;
-    margin-top: 4px;
+
+    @media screen and (min-width: 480px) {
+      float: left;
+      text-align: left;
+      padding-left: 10px;
+      padding-bottom: 15px;
+    }
   }
 }
+
 .social-icon {
-  text-align: center;
-  margin-top: 10px;
   @extend %list-reset;
+  margin-top: 10px;
+  text-align: center;
   padding-bottom: 15px;
-  li {
+
+  .icon-item {
     display: inline-block;
     margin-right: 10px;
-    a {
+
+    .icon {
       display: block;
       border: 1px solid $color-white;
       width: 28px;
@@ -29,17 +40,26 @@
       background-repeat: no-repeat;
       background-position: center center;
       @include transition(.3s);
+
       &:hover {
         background-color: $color-white;
       }
     }
   }
+
+  @media screen and (min-width: 480px) {
+    float: right;
+    padding-right: 10px;
+    padding-top: 15px;
+    margin-top: 0;
+  }
 }
+
 
 $icon-list: 'fb', 'lin', 'twitter';
 @each $icon in $icon-list {
   .social-icon {
-    a {
+    .icon {
       &.icon-#{$icon} {
         background-image: url('../images/icon-#{$icon}.svg');
       }
@@ -53,20 +73,3 @@ $icon-list: 'fb', 'lin', 'twitter';
 }
 
 
-@media screen and (min-width: 480px) {
-  .site-footer {
-    p {
-      float: left;
-      text-align: left;
-      padding-left: 10px;
-      padding-bottom: 15px;
-    }
-    ul {
-      float: right;
-      padding-right: 10px;
-      padding-top: 15px;
-
-      margin-top: 0;
-    }
-  }
-}
