--- a/excercises/aboutme/css/_site-header.scss
+++ b/excercises/aboutme/css/_site-header.scss
@@ -1,17 +1,18 @@
 /* == SITE HEADER == */
 .site-header {
-  background-color: $color-green;
-  @include box-shadow($h: 1px, $blur: 5px, $color: #6d6d6d);
-  z-index: 1;
   position: fixed;
   width: 100%;
-  h1 {
+  z-index: 1;
+  background-color: $color-green;
+  @include box-shadow($h: 1px, $blur: 5px, $color: #6d6d6d);
+
+  .logo {
+    margin: 0;
+    padding: 5px 0;
     font-family: $Galada, cursive;
     font-weight: normal;
-    color: $color-white;
-    padding: 5px 0;
-    text-align: center;
     font-size: 3rem;
-    margin: 0;
+    color: $color-white;
+    text-align: center;
   }
 }
