--- a/excercises/my-first-website/sass/base/_default.scss
+++ b/excercises/my-first-website/sass/base/_default.scss
@@ -23,3 +23,9 @@ p {
   font-size: 1.4rem;
   line-height: 1.5;
 }
+
+.container {
+  width: 1220px;
+  margin-left: auto;
+  margin-right: auto;
+}
