--- a/excercises/my-first-website/sass/helpers/_mixins.scss
+++ b/excercises/my-first-website/sass/helpers/_mixins.scss
@@ -1,3 +1,3 @@
-@mixin transition($property: all, $duration: 1s, $function: null, $delay: null) {
+@mixin transition($property: all, $duration: .5s, $function: null, $delay: null) {
   transition: $property $duration $function $delay;
 }
