icon search + nav

--- a/excercises/my-first-website/sass/base/_default.scss
+++ b/excercises/my-first-website/sass/base/_default.scss
@@ -25,7 +25,8 @@ p {
 }
 
 .container {
-  width: 1220px;
+  position: relative;
+  max-width: 1220px;
   margin-left: auto;
   margin-right: auto;
 }
