--- a/excercises/my-first-website/sass/layout/_header.scss
+++ b/excercises/my-first-website/sass/layout/_header.scss
@@ -72,7 +72,7 @@
 
   .logo {
     position: absolute;
-    top: 45px;
+    top: -35px;
     margin-top: 0;
 
     a {
@@ -85,6 +85,50 @@
 
       &:hover {
         opacity: .7;
+      }
+    }
+  }
+}
+
+.site-header {
+
+  .navigation-search {
+    @extend %reset-list;
+    position: absolute;
+    top: -10px;
+    right: 0;
+
+    li {
+      display: inline-block;
+      margin-left: 35px;
+
+      a {
+        @extend %hide-text;
+        width: 36px;
+        height: 36px;
+        display: block;
+        background-image: url('../images/sprite.svg');
+        background-repeat: no-repeat;
+        background-size: 22rem 17rem;
+        @include transition();
+
+        &:hover {
+          opacity: .7;
+        }
+      }
+
+      &.menu {
+
+        a {
+          background-position: -178px -22px;
+        }
+      }
+
+      &.search {
+
+        a {
+          background-position: -121px -22px;
+        }
       }
     }
   }
