--- a/excercises/my-first-website/sass/layout/_navigation.scss
+++ b/excercises/my-first-website/sass/layout/_navigation.scss
@@ -12,6 +12,7 @@
         text-decoration: none;
         text-transform: uppercase;
         color: $header-text-color;
+        font-size: 1.4rem;
 
         &:hover {
           text-decoration: underline;
