--- a/excercises/my-first-website/sass/helpers/_placeholders.scss
+++ b/excercises/my-first-website/sass/helpers/_placeholders.scss
@@ -14,3 +14,11 @@
   margin: 0;
   padding: 0;
 }
+
+%hide-text {
+  color: transparent;
+  font-size: 0;
+  text-indent: 101%;
+  overflow: hidden;
+  white-space: nowrap;
+}
