--- a/excercises/my-first-website/sass/base/_default.scss
+++ b/excercises/my-first-website/sass/base/_default.scss
@@ -30,3 +30,9 @@ p {
   margin-left: auto;
   margin-right: auto;
 }
+
+%sprite {
+  background-image: url('../images/sprite.svg');
+  background-repeat: no-repeat;
+  background-size: 22rem 17rem;
+}
