--- a/excercises/my-first-website/sass/layout/_header.scss
+++ b/excercises/my-first-website/sass/layout/_header.scss
@@ -107,9 +107,7 @@
         width: 36px;
         height: 36px;
         display: block;
-        background-image: url('../images/sprite.svg');
-        background-repeat: no-repeat;
-        background-size: 22rem 17rem;
+        @extend %sprite;
         @include transition();
 
         &:hover {
@@ -130,6 +128,27 @@
           background-position: -121px -22px;
         }
       }
+    }
+  }
+}
+
+
+.site-header {
+
+  .link-play {
+    @extend %hide-text;
+    @extend %sprite;
+    width: 90px;
+    height: 90px;
+    display: block;
+    position: absolute;
+    left: 50%;
+    bottom: 40px;
+    margin-left: -45px;
+    background-position: 5px 5px;
+
+    &:hover {
+      background-position: 5px -87px;
     }
   }
 }
