--- a/excercises/my-first-website/sass/layout/_header.scss
+++ b/excercises/my-first-website/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 .site-header {
   position: relative;
-  background-image: url('../images/pexels-photo-122260.jpg');
+  background-image: url('../images/banner.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
