update adjustments and add section places

--- a/excercises/my-first-website/sass/base/_colors.scss
+++ b/excercises/my-first-website/sass/base/_colors.scss
@@ -1,5 +1,4 @@
-$white: #FFFFFF;
-$black: #000000;
+$header-text-color: #FFFFFF;
+$header-link-color: #DA7074;
 
-$header-text-color: $white;
-$header-link-color: #da7074;
+$places-text-color: #FFFFFF;
