--- a/excercises/my-first-website/sass/helpers/_placeholders.scss
+++ b/excercises/my-first-website/sass/helpers/_placeholders.scss
@@ -22,3 +22,11 @@
   overflow: hidden;
   white-space: nowrap;
 }
+
+%display-flex {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
