--- a/excercises/my-first-website/sass/layout/_navigation.scss
+++ b/excercises/my-first-website/sass/layout/_navigation.scss
@@ -6,7 +6,7 @@
 
     li {
       display: inline-block;
-      margin: 0 16px;
+      margin: 0 1.6rem;
 
       a {
         text-decoration: none;
