--- a/excercises/my-first-website/sass/layout/_header.scss
+++ b/excercises/my-first-website/sass/layout/_header.scss
@@ -5,8 +5,12 @@
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 100vh;
-  padding-top: 80px;
+  padding-top: 40px;
+
+  @include rwd(lg) {
+    height: 100vh;
+    padding-top: 80px;
+  }
 
   .intro {
     max-width: 500px;
@@ -14,66 +18,80 @@
     margin-right: auto;
     color: $header-text-color;
     text-align: center;
-    transform: translateY(50%);
+    padding-top: 4rem;
+    padding-bottom: 4rem;
 
-    h1 {
+    @include rwd(xl) {
+      transform: translateY(50%);
+    }
+
+    .intro__heading {
       margin: 0;
       font-family: $headline-main-font, serif;
       font-weight: 400;
       font-size: 8rem;
     }
 
-    p {
+    .intro__text {
       font-size: 1.6rem;
       font-weight: 400;
-      margin-top: 25px;
-    }
-
-    span {
-      position: relative;
-      display: inline-block;
-      margin-top: 100px;
-      width: 500px;
-
-      a {
-        position: relative;
-        display: inline-block;
-        padding: 17px 47px;
-        background-color: $header-link-color;
-        color: $header-text-color;
-        text-decoration: none;
-        text-transform: uppercase;
-        border-radius: 40px;
-        z-index: 2;
-        @include transition();
-
-        &:hover {
-          background-color: darken($header-link-color, 20%);
-        }
-      }
-
-      &::after {
-        position: absolute;
-        content: "";
-        display: inline-block;
-        width: 100%;
-        height: 1px;
-        top: 50%;
-        left: 0;
-        margin-top: -1px;
-        background-color: $header-link-color;
-        z-index: 1;
-      }
+      margin-top: 2.5rem;
     }
   }
 }
 
+
+.intro__link {
+  position: relative;
+  display: inline-block;
+  margin-top: 10rem;
+
+  @include rwd(md) {
+    width: 500px;
+  }
+
+  a {
+    position: relative;
+    display: inline-block;
+    padding: 1.7rem 4.7rem;
+    background-color: $header-link-color;
+    color: $header-text-color;
+    text-decoration: none;
+    text-transform: uppercase;
+    border-radius: 40px;
+    z-index: 2;
+    @include transition();
+
+    &:hover {
+      background-color: darken($header-link-color, 20%);
+    }
+  }
+
+  &::after {
+    position: absolute;
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 1px;
+    top: 50%;
+    left: 0;
+    margin-top: -1px;
+    background-color: $header-link-color;
+    z-index: 1;
+  }
+}
+
+
 .site-header {
 
   .logo {
-    position: absolute;
-    top: -35px;
+    text-align: center;
     margin-top: 0;
+
+    @include rwd(md) {
+      position: absolute;
+      top: -35px;
+    }
 
     a {
       display: inline-block;
@@ -94,13 +112,21 @@
 
   .navigation-search {
     @extend %reset-list;
-    position: absolute;
-    top: -10px;
-    right: 0;
+    text-align: center;
+
+    @include rwd(md) {
+      position: absolute;
+      top: -10px;
+      right: 0;
+    }
 
     li {
       display: inline-block;
-      margin-left: 35px;
+      margin: 10px 25px 40px;
+
+      @include rwd(md) {
+        margin-left: 35px;
+      }
 
       a {
         @extend %hide-text;
@@ -132,20 +158,28 @@
   }
 }
 
-
 .site-header {
 
   .link-play {
     @extend %hide-text;
     @extend %sprite;
+    position: relative;
     width: 90px;
     height: 90px;
     display: block;
-    position: absolute;
-    left: 50%;
-    bottom: 40px;
-    margin-left: -45px;
     background-position: 5px 5px;
+    border: 0;
+    cursor: pointer;
+    background-color: transparent;
+    margin: 5rem auto 0;
+    bottom: 5rem;
+
+    @include rwd(lg) {
+      position: absolute;
+      left: 50%;
+      bottom: 40px;
+      margin-left: -45px;
+    }
 
     &:hover {
       background-position: 5px -87px;
