update mixin flex

--- a/excercises/my-first-website/sass/helpers/_placeholders.scss
+++ b/excercises/my-first-website/sass/helpers/_placeholders.scss
@@ -24,9 +24,5 @@
 }
 
 %display-flex {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
+  @include display-flex();
 }
