--- a/excercises/my-first-website/sass/style.scss
+++ b/excercises/my-first-website/sass/style.scss
@@ -6,8 +6,10 @@
 @import "base/default";
 
 /* ========== helpers ========== */
-@import "helpers/placeholders";
 @import "helpers/mixins";
+@import "helpers/mixins-flex";
+@import "helpers/placeholders";
+
 
 /* ========== layout ========== */
 @import "layout/header";
