add footer and section links + mixins flex

--- a/excercises/my-first-website/sass/base/_colors.scss
+++ b/excercises/my-first-website/sass/base/_colors.scss
@@ -1,4 +1,5 @@
-$header-text-color: #FFFFFF;
-$header-link-color: #DA7074;
-
-$places-text-color: #FFFFFF;
+$white: #FFFFFF;
+$black: #000000;
+$pink: #DA7074;
+$grey: #414141;
+$grey-light: #565656;
