--- a/excercises/my-first-website/sass/layout/_header.scss
+++ b/excercises/my-first-website/sass/layout/_header.scss
@@ -16,7 +16,7 @@
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
-    color: $header-text-color;
+    color: $white;
     text-align: center;
     padding-top: 4rem;
     padding-bottom: 4rem;
@@ -54,8 +54,8 @@
     position: relative;
     display: inline-block;
     padding: 1.7rem 4.7rem;
-    background-color: $header-link-color;
-    color: $header-text-color;
+    background-color: $pink;
+    color: $white;
     text-decoration: none;
     text-transform: uppercase;
     border-radius: 40px;
@@ -63,7 +63,7 @@
     @include transition();
 
     &:hover {
-      background-color: darken($header-link-color, 20%);
+      background-color: darken($pink, 20%);
     }
   }
 
@@ -76,7 +76,7 @@
     top: 50%;
     left: 0;
     margin-top: -1px;
-    background-color: $header-link-color;
+    background-color: $pink;
     z-index: 1;
   }
 }
