--- a/excercises/my-first-website/sass/pages/_home-places.scss
+++ b/excercises/my-first-website/sass/pages/_home-places.scss
@@ -11,10 +11,10 @@
     position: relative;
     height: 300px;
     text-align: center;
-    color: $places-text-color;
+    color: $white;
     cursor: pointer;
     background-size: cover;
-    backgrounud-position: center center;
+    background-position: center center;
     padding-bottom: 50px;
     @extend %display-flex;
     @include align-items(flex-end);
@@ -30,6 +30,17 @@
 
     .place-heading {
       z-index: 1;
+
+      h2 {
+        text-transform: uppercase;
+        font-size: 1.2rem;
+        margin-bottom: 0;
+      }
+
+      p {
+        margin-top: 0;
+        font-style: italic;
+      }
     }
 
     &::before {
